# uncertainly-haskell

./: .gitignore  README.md  uncertainly.cabal
Data/: Uncertain.hs
Data/Uncertain/: VectorSpace.hs
